[AHC-3275] Fix SonarQube code smells